@@ -1,6 +1,6 @@
 #include <DysectAPI.h>
 
-DysectStatus DysectAPI::onProcStart() {
+DysectStatus DysectAPI::onProcStart(int argc, char **argv) {
   Probe* entry    = new Probe(Code::location("do_SendOrStall"),
                               Domain::world(1000), Act::trace("Function @function() entry"));
 
